No wrap karma-bar text when bar is too short, fix wrong include social scss

--- a/app/app/styles/_profileCommon.scss
+++ b/app/app/styles/_profileCommon.scss
@@ -163,6 +163,7 @@ $medium-avatar-size: 80px;
                     color:color(4);
                     font-weight:bold;
                     box-shadow: inset 0px 0px 10px 0px rgba(color(4), 0.75);
+                    white-space:nowrap;
                 }
                 .positive {
                     background:color(2);
